--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ black==21.9b0
 certifi==2022.5.18.1
 click==8.0.3
 colorama==0.4.5
+dj-database-url==0.5.0
 Django==3.2.8
+django-heroku==0.3.1
 gunicorn==20.1.0
 mypy-extensions==0.4.3
 pathspec==0.9.0
 Pillow==8.4.0
 platformdirs==2.4.0
+psycopg2==2.9.3
 pytz==2021.3
 regex==2021.10.23
 sqlparse==0.4.2
