--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pathspec==0.9.0
 Pillow==8.4.0
 platformdirs==2.4.0
 psycopg2==2.9.3
+python-decouple==3.6
 pytz==2021.3
 regex==2021.10.23
 sqlparse==0.4.2
